src/objects/SomDig_DeliverPrio__c.object
<CustomObject>
    <description>Regelwerk für das Prio-Modell</description>
    <fields>
        <fullName>SomDig_Abrechungsart__c</fullName>
        <description>Hier kann angegeben werden, ob die Auslieferungsprioritäten für eine bestimmte Abrechnungsart für diesen Account im AdServer gesetzt werden sollen. 
Vgl. auch Konzept SOM - ADcalibur - Spezifikation - Auslieferungsprioritäten Adserver</description>
        <inlineHelpText>Für welche Abrechnungsart soll diese Auslieferungspriorität angegeben werden?</inlineHelpText>
        <label>Abrechungsart</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPMo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomDig_Ad_Type__c</fullName>
        <description>Der AdType steuert die Auslieferungsprioritäten im AdServer. 
Vgl. auch Konzept SOM - ADcalibur - Spezifikation - Auslieferungsprioritäten Adserver&quot;</description>
        <inlineHelpText>Hier kann der &quot;Ad Type&quot; festgelegt werden, der für diese Auslieferungspriorität im Adserver gesetzt werden soll.</inlineHelpText>
        <label>Ad Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sponsorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Priority</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomDig_Auftragstyp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Auswahl des Auftragstyp zur Steuerung der Auslieferungsprioritäten. Vgl. auch Konzept SOM - ADcalibur - Spezifikation - Auslieferungsprioritäten Adserver</description>
        <inlineHelpText>Für welche Auftragstyp soll diese Auslieferungspriorität angegeben werden?</inlineHelpText>
        <label>Auftragstyp</label>
        <referenceTo>SomDig_Auftragstyp__c</referenceTo>
        <relationshipLabel>Auslieferungsprioritäten</relationshipLabel>
        <relationshipName>Auslieferungsprioritaeten</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_Belegungseinheitstyp__c</fullName>
        <description>Auswahl des Belegungseinheitstyp zur Steuerung der Auslieferungsprioritäten. Vgl. auch Konzept SOM - ADcalibur - Spezifikation - Auslieferungsprioritäten Adserver</description>
        <inlineHelpText>Für welchen Belegungseinheitstyp soll diese Auslieferungspriorität angegeben werden?</inlineHelpText>
        <label>Belegungseinheitstyp</label>
        <picklist>
            <picklistValues>
                <fullName>71m intern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YouTube</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomDig_Gueltig_ab__c</fullName>
        <description>&quot;Hier wird angegeben, ab wann diese Auslieferungspriorität gültig ist.&quot; 
Vgl. auch Konzept SOM - ADcalibur - Spezifikation - Auslieferungsprioritäten Adserver</description>
        <inlineHelpText>Hier bitte angegeben, ab wann diese Auslieferungspriorität gültig ist.</inlineHelpText>
        <label>Gültig ab</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomDig_Gueltig_bis__c</fullName>
        <description>&quot;Hier wird angegeben, bis wann diese Auslieferungspriorität gültig ist.&quot; 
Vgl. auch Konzept SOM - ADcalibur - Spezifikation - Auslieferungsprioritäten Adserver</description>
        <inlineHelpText>Hier bitte angegeben, bis wann diese Auslieferungspriorität gültig ist.</inlineHelpText>
        <label>Gültig bis</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomDig_Mediagattungsdifferenzierung__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Auswahl der Mediagattungsdifferenzierung zur Steuerung der Auslieferungsprioritäten. Vgl. auch Konzept SOM - ADcalibur - Spezifikation - Auslieferungsprioritäten Adserver</description>
        <inlineHelpText>Für welche Mediagattungsdifferenzierung soll eine Auslieferungspriorität angegeben werden?</inlineHelpText>
        <label>Mediagattungsdifferenzierung</label>
        <referenceTo>SomDig_MediagattungsDifferenzierung__c</referenceTo>
        <relationshipName>Adserver_Prioritaeten</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_Preistyp_zur_Auslieferung__c</fullName>
        <description>Auswahl Preistyp zur Auslieferung (Delivery Rate Type) zur Steuerung der Auslieferungsprioritäten. Vgl. auch Spezifikation SOM - ADcalibur - Spezifikation - Auslieferungsprioritäten Adserver</description>
        <inlineHelpText>Hier kann der &quot;Preistyp zur Auslieferung&quot; (Delivery Rate Type) festgelegt werden, der für diese Auslieferungspriorität im Adserver gesetzt werden soll.</inlineHelpText>
        <label>Preistyp zur Auslieferung</label>
        <picklist>
            <picklistValues>
                <fullName>Evenly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frontloaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>As fast as possible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomDig_Prio__c</fullName>
        <description>Die Prio steuert die Auslieferungsprioritäten im AdServer. 
Vgl. auch Konzept SOM - ADcalibur - Spezifikation - Auslieferungsprioritäten Adserver</description>
        <inlineHelpText>Hier kann die &quot;Prio&quot; festgelegt werden, die für diese Auslieferungspriorität im Adserver gesetzt werden soll.</inlineHelpText>
        <label>Prio</label>
        <picklist>
            <controllingField>SomDig_Ad_Type__c</controllingField>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomDig_Rotationstyp__c</fullName>
        <description>Auswahl des Rotationstyp zur Steuerung der Auslieferungsprioritäten. Vgl. auch Konzept SOM - ADcalibur - Spezifikation - Auslieferungsprioritäten Adserver</description>
        <inlineHelpText>Für welchen Rotationstyp soll diese Auslieferungspriorität angegeben werden?</inlineHelpText>
        <label>Rotationstyp</label>
        <picklist>
            <picklistValues>
                <fullName>Brand-Rotation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network-Rotation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site-Rotation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Themen-Rotation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV-Brand-Rotation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Umfeld</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomDig_UniqueKey__c</fullName>
        <description>Zusammenfassung aller Felder einer Auslieferungspriorität um auf Duplikate zu prüfen</description>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Werbeform_Kurzform__c</fullName>
        <description>Hier kann angegeben werden, ob die Auslieferungsprioritäten für eine bestimmte Werbeform für diesen Account im AdServer gesetzt werden sollen. 
Vgl. auch Konzept SOM - ADcalibur - Spezifikation - Auslieferungsprioritäten Adserver</description>
        <inlineHelpText>Hier kann angegeben werden für welche Werbeform die Auslieferungsprioritäten für diesen Werbetreibenden im Adserver festgelegt werden.</inlineHelpText>
        <label>Werbeform Kurzform</label>
        <picklist>
            <picklistValues>
                <fullName>PR1/MR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR1/MR/POR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prio3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Auslieferungspriorität</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Gueltig_ab__c</columns>
        <columns>SomDig_Gueltig_bis__c</columns>
        <columns>SomDig_Mediagattungsdifferenzierung__c</columns>
        <columns>SomDig_Werbeform_Kurzform__c</columns>
        <columns>SomDig_Auftragstyp__c</columns>
        <columns>SomDig_Abrechungsart__c</columns>
        <columns>SomDig_Rotationstyp__c</columns>
        <columns>SomDig_Belegungseinheitstyp__c</columns>
        <columns>SomDig_Ad_Type__c</columns>
        <columns>SomDig_Prio__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>SomDig_Preistyp_zur_Auslieferung__c</columns>
        <columns>SomDig_UniqueKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>PRIO-{0}</displayFormat>
        <label>Priorität-Nr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auslieferungsprioritäten</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>